--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,20 @@
 [metadata]
-name = dol
-description = Data Object Layer
+version = 0.0.2
+description = Base builtin tools make and transform data object layers (dols).
 root_url = https://github.com/i2mint
-author = OtoSense
 license = mit
 description_file = README.md
+long_description = file:README.md
+long_description_content_type = text/markdown
+keywords = 
+		
+name = dol
+display_name = dol
+
+[options]
+packages = find:
+include_package_data = True
+zip_safe = False
 install_requires = 
 		
-description-file = README.md
 
