--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,15 @@
 [metadata]
-version = 0.0.2
+name = dol
+version = 0.0.3
+url = https://github.com/i2mint/dol
+platforms = any
+description_file = README.md
 description = Base builtin tools make and transform data object layers (dols).
 root_url = https://github.com/i2mint
 license = mit
-description_file = README.md
 long_description = file:README.md
 long_description_content_type = text/markdown
 keywords = 
-		
-name = dol
 display_name = dol
 
 [options]
@@ -16,5 +17,4 @@ packages = find:
 include_package_data = True
 zip_safe = False
 install_requires = 
-		
 
