--- a/setup.cfg
+++ b/setup.cfg
@@ -7,9 +7,13 @@ description_file = README.md
 description = Base builtin tools make and transform data object layers (dols).
 root_url = https://github.com/i2mint
 license = mit
+author = OtoSense
+author_email = thorwhalen1@gmail.com
 long_description = file:README.md
 long_description_content_type = text/markdown
-keywords = 
+keywords =
+    storage
+    interface
 display_name = dol
 
 [options]
