- synching signatures to i2

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,5 +20,9 @@ display_name = dol
 packages = find:
 include_package_data = True
 zip_safe = False
-install_requires = 
+install_requires =
+;    If you're reading this, know that there are no dependencies,
+;	nor will they ever be.
+;   So if you're a contributor that's about to add some. Don't.
+;	Find another way to solve your problem!
 
