chore: spelling error

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ include_package_data = True
 zip_safe = False
 install_requires =
 ;    If you're reading this, know that there are no dependencies,
-;	nor will they ever be.
+;	nor will there ever be.
 ;   So if you're a contributor that's about to add some. Don't.
 ;	Find another way to solve your problem!
 
