add FanoutReader.from_variadics and let __delitem__ permissive

--- a/.gitignore
+++ b/.gitignore
@@ -79,7 +79,6 @@ target/
 
 # Jupyter Notebook
 .ipynb_checkpoints
-notebook.ipynb
 
 # pyenv
 .python-version
@@ -114,3 +113,6 @@ venv.bak/
 
 # PyCharm
 .idea
+
+# Notebook playground
+vf.ipynb
