--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,8 @@ display_name = dol
 packages = find:
 include_package_data = True
 zip_safe = False
+tests_require = 
+    numpy
 install_requires =
 ;    If you're reading this, know that there are no dependencies,
 ;	nor will there ever be.
