add ignore to pylint

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,12 +34,13 @@ jobs:
         with:
           root-dir: ${{ env.PROJECT_NAME }}
           enable: missing-module-docstring
+          ignore: tests,scrap
 
       - name: Pytest Validation
         uses: i2mint/isee/actions/pytest-validation@master
         with:
           root-dir: ${{ env.PROJECT_NAME }}
-          paths-to-ignore: examples,scrap
+          paths-to-ignore: scrap
 
   publish:
     name: Publish
