--- a/setup.cfg
+++ b/setup.cfg
@@ -23,4 +23,8 @@ zip_safe = False
 tests_require = 
 	numpy
 install_requires = 
+# No dependencies, and should NEVER be any!!
 
+[tool:pytest]
+# Add doctest options to enable ellipsis handling
+addopts = --doctest-modules --doctest-ellipsis
