--- a/setup.cfg
+++ b/setup.cfg
@@ -26,5 +26,6 @@ install_requires =
 # No dependencies, and should NEVER be any!!
 
 [tool:pytest]
-# Add doctest options to enable ellipsis handling
-addopts = --doctest-modules --doctest-ellipsis
+# Use doctest_optionflags instead of --doctest-ellipsis
+addopts = --doctest-modules
+doctest_optionflags = ELLIPSIS NORMALIZE_WHITESPACE
