--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,4 @@ install_requires =
 # No dependencies, and should NEVER be any!!
 
 [tool:pytest]
-# Use doctest_optionflags instead of --doctest-ellipsis
-addopts = --doctest-modules
-doctest_optionflags = ELLIPSIS NORMALIZE_WHITESPACE
+doctest_optionflags = ELLIPSIS
