--- a/setup.cfg
+++ b/setup.cfg
@@ -25,3 +25,8 @@ tests_require =
 install_requires = 
 # No dependencies, and should NEVER be any!!
 
+[pytest]
+addopts = --doctest-modules
+doctest_optionflags =
+    ELLIPSIS
+    IGNORE_EXCEPTION_DETAIL
