--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,7 @@ tests_require =
 install_requires = 
 # No dependencies, and should NEVER be any!!
 
-[pytest]
+[tool:pytest]
 addopts = --doctest-modules
 doctest_optionflags =
     ELLIPSIS
