--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      # Necessary for 3.12, since setuptools was removed there
+      - name: Install setuptools
+        run: python -m pip install setuptools
+
       - name: Install Dependencies
         uses: i2mint/isee/actions/install-packages@master
         with:
