Enhance CI ignore settings in ci.yml
Added ignore-patterns to the CI configuration for better control over ignored files.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,8 @@ jobs:
           root-dir: ${{ env.PROJECT_NAME }}
           enable: missing-module-docstring
           ignore: tests,scrap
-
+          ignore-patterns: '.*tests.*|.*scrap.*'
+          
       - name: Pytest Validation
         uses: i2mint/isee/actions/pytest-validation@master
         with:
