Disable Pylint Validation in ci.yml
Comment out Pylint Validation step in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,13 +33,13 @@ jobs:
 
       # Documentation on "enable" codes:
       #     http://pylint.pycqa.org/en/latest/technical_reference/features.html#basic-checker-messages
-      - name: Pylint Validation
-        uses: i2mint/isee/actions/pylint-validation@master
-        with:
-          root-dir: ${{ env.PROJECT_NAME }}
-          enable: missing-module-docstring
-          ignore: tests,scrap
-          ignore-patterns: '.*tests.*|.*scrap.*'
+      # - name: Pylint Validation
+      #   uses: i2mint/isee/actions/pylint-validation@master
+      #   with:
+      #     root-dir: ${{ env.PROJECT_NAME }}
+      #     enable: missing-module-docstring
+      #     ignore: tests,scrap
+      #     ignore-patterns: '.*tests.*|.*scrap.*'
           
       - name: Pytest Validation
         uses: i2mint/isee/actions/pytest-validation@master
