--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = dol
-version = 0.3.27
+version = 0.3.28
 url = https://github.com/i2mint/dol
 platforms = any
 description_file = README.md
@@ -10,8 +10,8 @@ license = mit
 long_description = file:README.md
 long_description_content_type = text/markdown
 keywords = 
-	storage
-	interface
+		storage
+		interface
 display_name = dol
 
 [options]
@@ -21,4 +21,8 @@ zip_safe = False
 tests_require = 
 	numpy
 install_requires = 
+
+[options.extras_require]
+testing = 
+		
 
