Install setuptools for Python 3.12
Added step to install setuptools for Python 3.12 compatibility.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,6 +65,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      # Necessary for 3.12, since setuptools was removed there
+      - name: Install setuptools
+        run: python -m pip install setuptools
+        
       - name: Format Source Code
         uses: i2mint/isee/actions/format-source-code@master
 
