--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,9 @@
-name: Continuous Integration
-on: [ push, pull_request ]
+name: Continuous Integration (Modern)
+on: [push, pull_request]
+
 env:
   PROJECT_NAME: dol
+
 jobs:
   validation:
     name: Validation
@@ -10,42 +12,75 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.10", "3.12"]
+
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v6
         with:
           python-version: ${{ matrix.python-version }}
 
-      # Necessary for 3.12, since setuptools was removed there
-      - name: Install setuptools
-        run: python -m pip install setuptools
-
       - name: Install Dependencies
-        uses: i2mint/isee/actions/install-packages@master
+        uses: i2mint/wads/actions/install-deps@master
         with:
-          dependency-files: setup.cfg
+          dependency-files: pyproject.toml
+          extras: dev,test
+          # Fallback for projects still using setup.cfg:
+          # dependency-files: setup.cfg
+          # ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}  # Uncomment for private dependencies
+
+
 
       - name: Format Source Code
-        uses: i2mint/isee/actions/format-source-code@master
+        uses: i2mint/wads/actions/ruff-format@master
+        with:
+          line-length: 88
+          target-path: .
 
-      # Documentation on "enable" codes:
-      #     http://pylint.pycqa.org/en/latest/technical_reference/features.html#basic-checker-messages
-      # - name: Pylint Validation
-      #   uses: i2mint/isee/actions/pylint-validation@master
-      #   with:
-      #     root-dir: ${{ env.PROJECT_NAME }}
-      #     enable: missing-module-docstring
-      #     ignore: tests,scrap
-      #     ignore-patterns: '.*tests.*|.*scrap.*'
-          
-      - name: Pytest Validation
-        uses: i2mint/isee/actions/pytest-validation@master
+      - name: Lint Validation
+        uses: i2mint/wads/actions/ruff-lint@master
         with:
           root-dir: ${{ env.PROJECT_NAME }}
-          paths-to-ignore: scrap
+          output-format: github
+          # Ruff will read configuration from pyproject.toml
+
+      - name: Run Tests
+        uses: i2mint/wads/actions/run-tests@master
+        with:
+          root-dir: ${{ env.PROJECT_NAME }}
+          exclude: examples,scrap
+          coverage: true
+          pytest-args: -v --tb=short
+
+
+  windows-validation:
+    name: Windows Tests (Informational)
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    runs-on: windows-latest
+    continue-on-error: true  # Don't fail the entire workflow if Windows tests fail
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v6
+        with:
+          python-version: "3.10"
+
+      - name: Install Dependencies
+        uses: i2mint/wads/actions/install-deps@master
+        with:
+          dependency-files: pyproject.toml
+          extras: dev,test
+
+      - name: Run Windows Tests
+        uses: i2mint/wads/actions/windows-tests@master
+        with:
+          root-dir: ${ env.PROJECT_NAME }
+          exclude: examples,scrap
+          pytest-args: -v --tb=short
+
 
   publish:
     name: Publish
@@ -54,53 +89,79 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ "3.12" ]
+        python-version: ["3.12"]
+
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v6
         with:
           python-version: ${{ matrix.python-version }}
 
-      # Necessary for 3.12, since setuptools was removed there
-      - name: Install setuptools
-        run: python -m pip install setuptools
-        
       - name: Format Source Code
-        uses: i2mint/isee/actions/format-source-code@master
+        uses: i2mint/wads/actions/ruff-format@master
 
       - name: Update Version Number
+        id: version
         uses: i2mint/isee/actions/bump-version-number@master
 
-      - name: Package
-        uses: i2mint/isee/actions/package@master
+      - name: Build Distribution
+        uses: i2mint/wads/actions/build-dist@master
+        with:
+          sdist: true
+          wheel: true
+        # Uncomment for private dependencies:
+        # with:
+        #   ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Publish
-        uses: i2mint/isee/actions/publish@master
+      - name: Publish to PyPI
+        uses: i2mint/wads/actions/pypi-upload@master
         with:
           pypi-username: ${{ secrets.PYPI_USERNAME }}
           pypi-password: ${{ secrets.PYPI_PASSWORD }}
+          skip-existing: false
 
-      - name: Check In
-        uses: i2mint/isee/actions/check-in@master
+      - name: Track Code Metrics
+        uses: i2mint/umpyre/actions/track-metrics@master
+        continue-on-error: true  # Don't fail CI if metrics collection fails
         with:
-          commit-message: "**CI** Formatted code + Updated version number and documentation. [skip ci]"
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          config-path: .github/umpyre-config.yml  # Optional: defaults to .umpyre.yml
+
+      - name: Commit Changes
+        uses: i2mint/wads/actions/git-commit@master
+        with:
+          commit-message: "**CI** Formatted code + Updated version to ${{ env.VERSION }} [skip ci]"
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          push: true
 
       - name: Tag Repository
-        uses: i2mint/isee/actions/tag-repository@master
+        uses: i2mint/wads/actions/git-tag@master
         with:
-          tag: $VERSION
+          tag: ${{ env.VERSION }}
+          message: "Release version ${{ env.VERSION }}"
+          push: true
+
 
   github-pages:
     name: Publish GitHub Pages
+
+    permissions:
+      contents: write
+      pages: write
+      id-token: write
+
     if: "!contains(github.event.head_commit.message, '[skip ci]') && github.ref == format('refs/heads/{0}', github.event.repository.default_branch)"
     needs: publish
     runs-on: ubuntu-latest
+
     steps:
       - uses: i2mint/epythet/actions/publish-github-pages@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          ignore: "tests/,scrap/,examples/"
+
