--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Run Windows Tests
         uses: i2mint/wads/actions/windows-tests@master
         with:
-          root-dir: ${ env.PROJECT_NAME }
+          root-dir: ${{ env.PROJECT_NAME }}
           exclude: examples,scrap
           pytest-args: -v --tb=short
 
