style: simplify formatting in pyproject.toml for consistency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,5 @@
 [build-system]
-requires = [
-    "hatchling",
-]
+requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
@@ -10,10 +8,7 @@ version = "0.3.37"
 description = "Base builtin tools make and transform data object layers (dols)."
 readme = "README.md"
 requires-python = ">=3.10"
-keywords = [
-    "storage",
-    "interface",
-]
+keywords = ["storage", "interface"]
 authors = []
 dependencies = []
 
@@ -41,38 +36,21 @@ exclude = [
 ]
 
 [tool.ruff.lint]
-select = [
-    "D100",
-]
-ignore = [
-    "D203",
-    "E501",
-    "B905",
-]
+select = ["D100"]
+ignore = ["D203", "E501", "B905"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
 
 [tool.ruff.lint.per-file-ignores]
-"tests/*" = [
-    "D",
-]
-"examples/*" = [
-    "D",
-]
-"scrap/*" = [
-    "D",
-]
+"**/tests/*" = ["D"]
+"**/examples/*" = ["D"]
+"**/scrap/*" = ["D"]
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-testpaths = [
-    "tests",
-]
-doctest_optionflags = [
-    "NORMALIZE_WHITESPACE",
-    "ELLIPSIS",
-]
+testpaths = ["tests"]
+doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]
 
 [tool.wads.ci]
 project_name = ""
@@ -99,24 +77,12 @@ enabled = false
 enabled = false
 
 [tool.wads.ci.testing]
-python_versions = [
-    "3.10",
-    "3.12",
-]
-pytest_args = [
-    "-v",
-    "--tb=short",
-]
+python_versions = ["3.10", "3.12"]
+pytest_args = ["-v", "--tb=short"]
 coverage_enabled = true
 coverage_threshold = 0
-coverage_report_format = [
-    "term",
-    "xml",
-]
-exclude_paths = [
-    "examples",
-    "scrap",
-]
+coverage_report_format = ["term", "xml"]
+exclude_paths = ["examples", "scrap"]
 test_on_windows = true
 
 [tool.wads.ci.build]
@@ -129,8 +95,4 @@ enabled = true
 [tool.wads.ci.docs]
 enabled = true
 builder = "epythet"
-ignore_paths = [
-    "tests/",
-    "scrap/",
-    "examples/",
-]
+ignore_paths = ["tests/", "scrap/", "examples/"]
